--- a/part_2/lections/theme00-express-html/ex_01/css/es.css
+++ b/part_2/lections/theme00-express-html/ex_01/css/es.css
@@ -24,6 +24,11 @@ td {
     vertical-align: middle;
     margin: auto;
 }
+td.id {
+    height: 36px;
+    font-weight: bolder;
+    color: darkgreen;
+}
 td.item {
     height: 36px;
     text-align: left;
