--- a/part_2/lections/02-express-html/ex_00_hbs/css/style.css
+++ b/part_2/lections/02-express-html/ex_00_hbs/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../css/bg_grid.png) repeat ;
+    background: url(../images/bg_grid.png) repeat ;
     background-color: #f6fff5;
     color: rgb(16, 45, 28);
     font-family: "Comic Sans MS", serif;
