--- a/part_2/lections/02-express-html/ex_02/views/new.ejs
+++ b/part_2/lections/02-express-html/ex_02/views/new.ejs
@@ -15,13 +15,14 @@
                 type="text" 
                 name="lastName" 
                 minlength="1" maxlength="255" size="32" required
-                placeholder="Фамилия" <!--value="<%=fill.lastName%>"--> <br>
+                placeholder="Фамилия" 
+                <!--value="<%=fill.lastName%>"--> <br>
 
             <input class="value" 
                 type="number" 
                 name="rating" 
-                placeholder="Рейтинг"/>
-            <br>
+                placeholder="Рейтинг"
+                value="<%=fill.rating%>" /> <br>
 
             <br>Укажите гендер:
             <input type="radio" name="gender" value="1" checked /> М
