--- a/part_2/lections/02-express-html/ex_02/views/index-01.ejs
+++ b/part_2/lections/02-express-html/ex_02/views/index-01.ejs
@@ -14,8 +14,10 @@
     
     </table>
 
-<!-- программист устанавливает порядок полей --> 
-<!-- пользователь выбирает поля checkBox и -->
-<!-- направление сортировки RadioButton -->
+<!-- 
+    программист устанавливает порядок полей
+    пользователь выбирает поля из checkBoxs и
+    направление сортировки RadioButton 
+-->
 </body>
 </html>
