--- a/part_2/lections/02-express-html/ex_01/views/index-00.ejs
+++ b/part_2/lections/02-express-html/ex_01/views/index-00.ejs
@@ -12,10 +12,10 @@
     <br>
     <!-- передали массив объектов -->
     <table class="dialog">
-        <% for (let i = 0; i < arr.length; i++) {%>
+        <% for (let i = 0; i < arr.length; i++) { %>
         <tr>
             <td class="item">
-                <%=arr[i].id%>
+                <%= arr[i].id %>
             </td>
             <td class="item">
                 <%=arr[i].lastName%>
@@ -24,7 +24,7 @@
                 <%=arr[i].rating%>
             </td>
             <td class="item">
-                <%=arr[i].gender=='1'?'М':'Ж'%>
+                <%= arr[i].gender == 1? '-М-': '-Ж-' %>
             </td>
             <td class="item">
                 <%=arr[i].city%>
