--- a/part_2/lections/02-express-html/ex_02_ejs_post/views/new.ejs
+++ b/part_2/lections/02-express-html/ex_02_ejs_post/views/new.ejs
@@ -15,7 +15,7 @@
                 type="text" 
                 name="lastName" 
                 minlength="1" maxlength="255" size="32" required
-                placeholder="Фамилия" 
+                placeholder=<%= fill.lastName %> 
                 <!--value="<%=fill.lastName%>"--> <br>
 
             <input class="value" 
