--- a/part_2/lections/02-express-html/ex_00_hbs/views/index.hbs
+++ b/part_2/lections/02-express-html/ex_00_hbs/views/index.hbs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    
+    <center>{{ lab }}</center>
     <br>
     {{! Этот коммент останется на сервере }}
     {{! https://handlebarsjs.com/guide/builtin-helpers.html }}
