--- a/part_2/lections/02-express-html/ex_02_ejs_post_rout/views/partials/thead.ejs
+++ b/part_2/lections/02-express-html/ex_02_ejs_post_rout/views/partials/thead.ejs
@@ -1,8 +1,8 @@
 <thead>
     <tr> <!-- формируем заголовки -->
-        <% for (let title of keys) { %>
+        <% for (let key of keys) { %>
             <th>
-                <%= titles[title] %>
+                <%= titles[key] %>
             </th>
         <% } %>
     </tr>
