--- a/part_2/lections/02-express-html/ex_02_ejs_post_rout/views/partials/tbody.ejs
+++ b/part_2/lections/02-express-html/ex_02_ejs_post_rout/views/partials/tbody.ejs
@@ -1,12 +1,12 @@
 <tbody>
     <% for (let item of arr) { %>
         <tr>
-            <% for (let title of keys) { %>
-                <% tdClass = (title === 'id')? 'id': 'item' %>
+            <% for (let key of keys) { %>
+                <% tdClass = (key === 'id')? 'id': 'item' %>
                 <td class="<%=tdClass%>">
-                    <%= item[title] %>
+                    <%= item[key] %>
                 </td>
             <% } %>
         </tr>
-    <%} %>
+    <% } %>
 </tbody>
