--- a/part_2/lections/02-express-html/ex_00_1_hbs_query/viewsHBS/index.hbs
+++ b/part_2/lections/02-express-html/ex_00_1_hbs_query/viewsHBS/index.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>engine HBS</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/images/favicon.ico" />
 </head>
 
 <body>
