--- a/part_2/lections/02-express-html/ex_02_ejs_post_rout/css/style.css
+++ b/part_2/lections/02-express-html/ex_02_ejs_post_rout/css/style.css
@@ -4,11 +4,21 @@
     font-weight: 300;
 	font-style: normal;
 }
+@font-face {
+    font-family: 'Lato-Medium';
+	src: url('/fonts/Lato-Medium.woff2') format('woff2');
+    font-weight: 300;
+	font-style: normal;
+}
+@font-face {
+    font-family: 'Amstelvar-Roman';
+	src: url('/fonts/Amstelvar-Roman.ttf') format('ttf');
+}
 body {
     background: url(../css/bg_grid.png) repeat ;
     background-color: #f6fff5;
     color: rgb(16, 45, 28);
-    font-family: Gotham-Pro, serif;
+    font-family: Lato-Medium, serif;
     font-size: 16px;
     margin-top: 25px;
 }
@@ -38,6 +48,7 @@ td.id {
     height: 36px;
     font-weight: bolder;
     color: darkgreen;
+    font-family: Amstelvar-Roman, serif;
 }
 td.item {
     height: 36px;
@@ -74,11 +85,13 @@ textarea {
 .green { 
     color:#FFFFFF;
     cursor:pointer;
-    font-size:1.0em;
+    font-size:1.1em;
+    font-weight: 600;
+    font-family: Gotham-Pro, serif;
     border: solid 2px #3acc88;
     border-radius:6px;
     background:#3acc88;
-    width: 240px;
+    width: 280px;
     height: 40px;
     margin-top: 5px;
     padding: 5px 11px;
