--- a/part_2/labrabs/06-todo-SQLite/01-without-foreign-key/views/new.ejs
+++ b/part_2/labrabs/06-todo-SQLite/01-without-foreign-key/views/new.ejs
@@ -8,7 +8,7 @@
 
     
     <div>
-        <h3>Добавить абитуриента</h3>
+        <h3><%= fill.todo %> абитуриента</h3>
 
         <form>
             <input class="value"
@@ -33,7 +33,7 @@
                 formaction="/abiturs/new" 
                 formmethod="post" 
                 type="submit">
-                Добавить
+                <%= fill.todo %>
             </button>
 
         </form>
